--- a/templates/Place_Order_Application/add_product.html
+++ b/templates/Place_Order_Application/add_product.html
@@ -17,7 +17,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Add product</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
