--- a/templates/Place_Order_Application/administrator.html
+++ b/templates/Place_Order_Application/administrator.html
@@ -17,7 +17,42 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Administrator</h1>
+
+    <!-- Bootstrap container -->
+    <div class="grid-container">
+            <!-- Header-->
+            <div class="mTop" style="margin-top: 10px; background-color: lightblue; border-radius: 5px;">
+                <h1 class="display-4">Welcome to Place an Order </h1>
+                <p class="lead">Choose your favourite dish and order it. It will be delivered to you within 30 min.</p>
+            </div>
+            <!-- Header -->
+
+            <!-- Menu with 2 buttons -->
+            <div class="mMiddle">
+                <div style="display: flex;flex-direction: column; gap: 5px">
+                    <a class='btn btn-lg btn-success' href="add_product" style="width: 250px" role="button">Add product</a>
+                    <a class='btn btn-lg btn-success' href="check_orders" style="width: 250px" role="button">Check orders</a>
+                    <a class='btn btn-lg btn-success' href="check_products" style="width: 250px" role="button">Check products</a>
+                    <a class='btn btn-lg btn-success' href="index" style="width: 250px" role="button">Main page</a>
+                </div>
+            </div>
+            <!-- Menu with 2 buttons -->
+
+            <!-- Footer -->
+            <div class="mBottom" style="margin-bottom: 10px; background-color: lightblue; border-radius: 5px;">
+
+              <!-- Copyright -->
+              <div class="footer-copyright text-center py-3">© 2019 Copyright:
+                <a href="#"> Emil Karpowicz</a>
+              </div>
+              <!-- Copyright -->
+
+            </div>
+            <!-- Footer -->
+
+    </div>
+    <!-- Bootstrap container -->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
