--- a/templates/Place_Order_Application/guest.html
+++ b/templates/Place_Order_Application/guest.html
@@ -17,7 +17,43 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Guest</h1>
+
+    <!-- Bootstrap container -->
+    <div class="grid-container">
+            <!-- Header-->
+            <div class="mTop" style="margin-top: 10px; background-color: lightblue; border-radius: 5px;">
+                <h1 class="display-4">Welcome to Place an Order </h1>
+                <p class="lead">Choose your favourite dish and order it. It will be delivered to you within 30 min.</p>
+            </div>
+            <!-- Header -->
+
+            <!-- Menu with 2 buttons -->
+            <div class="mMiddle">
+                <div style="display: flex;flex-direction: column;gap:5px;">
+                    <a class='btn btn-lg btn-success' href="log_in" style="width: 250px" role="button">Login</a>
+                    <a class='btn btn-lg btn-success' href="place_order" style="width: 250px" role="button">Place order</a>
+                    <a class='btn btn-lg btn-success' href="check_status" style="width: 250px" role="button">Check status</a>
+                    <a class='btn btn-lg btn-success' href="add_user" style="width: 250px" role="button">Register</a>
+                    <a class='btn btn-lg btn-success' href="index" style="width: 250px" role="button">Main page</a>
+                </div>
+            </div>
+            <!-- Menu with 2 buttons -->
+
+            <!-- Footer -->
+            <div class="mBottom" style="margin-bottom: 10px; background-color: lightblue; border-radius: 5px;">
+
+              <!-- Copyright -->
+              <div class="footer-copyright text-center py-3">© 2019 Copyright:
+                <a href="#"> Emil Karpowicz</a>
+              </div>
+              <!-- Copyright -->
+
+            </div>
+            <!-- Footer -->
+
+    </div>
+    <!-- Bootstrap container -->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
