Add product,category forms created

--- a/templates/Place_Order_Application/administrator.html
+++ b/templates/Place_Order_Application/administrator.html
@@ -31,8 +31,10 @@
             <div class="mMiddle">
                 <div style="display: flex;flex-direction: column; gap: 5px">
                     <a class='btn btn-lg btn-success' href="add_product" style="width: 250px" role="button">Add product</a>
+                    <a class='btn btn-lg btn-success' href="add_category" style="width: 250px" role="button">Add category</a>
                     <a class='btn btn-lg btn-success' href="check_orders" style="width: 250px" role="button">Check orders</a>
                     <a class='btn btn-lg btn-success' href="check_products" style="width: 250px" role="button">Check products</a>
+                    <a class='btn btn-lg btn-success' href="check_categories" style="width: 250px" role="button">Check categories</a>
                     <a class='btn btn-lg btn-success' href="index" style="width: 250px" role="button">Main page</a>
                 </div>
             </div>
