--- a/templates/Place_Order_Application/add_category.html
+++ b/templates/Place_Order_Application/add_category.html
@@ -30,26 +30,12 @@
             <!-- Menu with 2 buttons -->
             <div class="mMiddle">
                 <div style="display: flex;flex-direction: column;gap:5px;">
-                    {% if all_products %}
-                        <table class="table table-striped table-hover" style="table-layout: fixed;display:flex;flex-direction:column">
-                            <thead class="thead-dark" style="display: table;width: 100%">
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Category</th>
-                                    <th>Price</th>
-                                </tr>
-                            </thead>
-                            <tbody style="height: 250px;overflow: auto">
-                                {% for p in all_products %}
-                                    <tr>
-                                        <td>{{ p.name }}</td>
-                                        <td>{{ p.category.name }}</td>
-                                        <td>{{ p.price }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    {% endif %}
+                    <h3>Add category</h3>
+                    <form method="POST">
+                        {{ form.as_p }}
+                        {% csrf_token %}
+                        <input type="submit" value="Submit">
+                    </form>
                 </div>
             </div>
             <!-- Menu with 2 buttons -->
