--- a/templates/Place_Order_Application/check_orders.html
+++ b/templates/Place_Order_Application/check_orders.html
@@ -14,7 +14,7 @@
     <!-- Own CSS -->
     <link rel="stylesheet" href={% static 'Place_Order_Application/css/mystyles.css' %}>
 
-    <title>Hello, world!</title>
+    <title>Check Orders</title>
   </head>
   <body>
 
@@ -31,9 +31,10 @@
             <div class="mMiddle">
                 <div style="display: flex;flex-direction: column;gap:5px;">
                     {% if all_orders %}
-                        <table class="table table-striped table-hover" style="table-layout: fixed;display:flex;flex-direction:column">
+                        <table id='orders' class="table table-striped table-hover" style="table-layout: fixed;display:flex;flex-direction:column">
                             <thead class="thead-dark" style="display: table;width: 100%">
                                 <tr>
+                                    <th>Id</th>
                                     <th>Time</th>
                                     <th>Address</th>
                                     <th>Phone</th>
@@ -43,10 +44,11 @@
                             <tbody style="height: 250px;overflow: auto">
                                 {% for o in all_orders %}
                                     <tr>
-                                        <td>{{ o.time }}</td>
-                                        <td>{{ o.address }}</td>
-                                        <td>{{ o.pnumber }}</td>
-                                        <td>{{ o.status }}</td>
+                                            <td>{{ o.id }}</td>
+                                            <td>{{ o.time }}</td>
+                                            <td>{{ o.address }}</td>
+                                            <td>{{ o.pnumber }}</td>
+                                            <td><a href="">{{ o.status }}</a></td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
