--- a/templates/Place_Order_Application/check_orders.html
+++ b/templates/Place_Order_Application/check_orders.html
@@ -63,7 +63,7 @@
 
               <!-- Copyright -->
               <div class="footer-copyright text-center py-3">© 2019 Copyright:
-                <a href="#"> Emil Karpowicz</a>
+                <a href="{% url 'Place_Order_Application:index' %}"> Emil Karpowicz</a>
               </div>
               <!-- Copyright -->
 
