--- a/templates/Place_Order_Application/guest.html
+++ b/templates/Place_Order_Application/guest.html
@@ -30,11 +30,10 @@
             <!-- Menu with 2 buttons -->
             <div class="mMiddle">
                 <div style="display: flex;flex-direction: column;gap:5px;">
-                    <a class='btn btn-lg btn-success' href="log_in" style="width: 250px" role="button">Login</a>
-                    <a class='btn btn-lg btn-success' href="place_order" style="width: 250px" role="button">Place order</a>
-                    <a class='btn btn-lg btn-success' href="check_status" style="width: 250px" role="button">Check status</a>
-                    <a class='btn btn-lg btn-success' href="add_user" style="width: 250px" role="button">Register</a>
-                    <a class='btn btn-lg btn-success' href="index" style="width: 250px" role="button">Main page</a>
+                    <a class='btn btn-lg btn-success' href="{%  url 'Place_Order_Application:log_in'%}" style="width: 250px" role="button">Login</a>
+                    <a class='btn btn-lg btn-success' href="{%  url 'Place_Order_Application:place_order'%}" style="width: 250px" role="button">Place order</a>
+                    <a class='btn btn-lg btn-success' href="{%  url 'Place_Order_Application:add_user'%}" style="width: 250px" role="button">Register</a>
+                    <a class='btn btn-lg btn-success' href="{%  url 'Place_Order_Application:index'%}" style="width: 250px" role="button">Main page</a>
                 </div>
             </div>
             <!-- Menu with 2 buttons -->
@@ -44,7 +43,7 @@
 
               <!-- Copyright -->
               <div class="footer-copyright text-center py-3">© 2019 Copyright:
-                <a href="#"> Emil Karpowicz</a>
+                <a href="{% url 'Place_Order_Application:index' %}"> Emil Karpowicz</a>
               </div>
               <!-- Copyright -->
 
