--- a/templates/Place_Order_Application/add_user.html
+++ b/templates/Place_Order_Application/add_user.html
@@ -3,10 +3,15 @@
 {% block body_block %}
 <div style="display: flex;flex-direction: column;gap:5px;">
     <h3>Register user</h3>
-    <form method="POST">
-        {{ form.as_p }}
+    {% if registered %}
+        <h1>You are allready registered</h1>
+    {% else %}
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
+        {{ main_form.as_p }}
+        {{ additional_info_form.as_p }}
         <input type="submit" value="Submit">
     </form>
+    {% endif %}
 </div>
 {% endblock %}
