--- a/templates/Place_Order_Application/log_in.html
+++ b/templates/Place_Order_Application/log_in.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 {% extends 'Place_Order_Application/base.html' %}
 {% block body_block %}
-    <h1>Login</h1>
+    <div class="jumbotron">
+        <h1>Please login</h1>
+        <form action="{% url 'Place_Order_Application:log_in' %}" method="POST">
+            {% csrf_token %}
+            <label for="username">Username: </label>
+            <input type="text" name="username" placeholder="Enter username">
+
+            <label for="password">Password: </label>
+            <input type="password" name="password" placeholder="Enter password">
+
+            <input type="submit" name="" value="Login">
+        </form>
+    </div>
 {% endblock %}
